--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,8 +8,8 @@
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
         android:icon="@mipmap/ic_launcher"
-        android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:label="Agenda"
+        android:roundIcon="@mipmap/agenda"
         android:supportsRtl="true"
         android:theme="@style/Theme.CRUD"
         tools:targetApi="31">
@@ -17,6 +17,7 @@
             android:name=".ListaCliente"
             android:exported="false" />
         <activity
+            android:windowSoftInputMode="stateHidden"
             android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
