--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,11 +14,11 @@
         android:theme="@style/Theme.CRUD"
         tools:targetApi="31">
         <activity
-            android:name=".ListaCliente"
-            android:exported="false" />
-        <activity
             android:windowSoftInputMode="stateHidden"
             android:name=".MainActivity"
+            android:exported="true" />
+        <activity
+            android:name=".ListaCliente"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
